:bug: FIX_scroll horizontal on mobileV2

--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ html {
   font-size: 10px;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 header {
   background-color: #080E2C;
   height: 90px;
